# colutius-desktop

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: ----.md  ---.md  bug--.md
.github/workflows/: Backup.yml  CI.yml  Telegram.yml
docs/: README-EN.md
include/core/: client.h  log.h  notify.h  notifymanager.h  storage.h
include/libcolutius/: Channel.h  Message.h  Server.h  Session.h  User.h
include/ui/: config.h  login.h  notice.h  systemtrayicon.h  widget.h
pkg/: PKGBUILD  colutius-desktop.desktop
src/: main.cpp
src/ColutiusCore/: client.cpp  log.cpp  notify.cpp  notifymanager.cpp  storage.cpp
src/UserInterface/: config.cpp  login.cpp  login.ui  notice.cpp  systemtrayicon.cpp  widget.cpp
src/ui/: widget.cpp  widget.h
